@@ -91,6 +91,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActivationFinder.cs" />
+    <Compile Include="ExceptionSerializer.cs" />
     <Compile Include="Feature.cs" />
     <Compile Include="FeatureManager.cs" />
     <Compile Include="FrmMain.cs">
